syntax = "proto3";
package comdex.asset.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/asset/v1beta1/asset.proto";
import "comdex/asset/v1beta1/pair.proto";
import "comdex/asset/v1beta1/params.proto";
import "comdex/asset/v1beta1/appMapping.proto";
import "comdex/asset/v1beta1/extendedPairVault.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message QueryAssetsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAssetsResponse {
  repeated Asset assets = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"assets\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAssetRequest {
  uint64 id = 1;
}

message QueryAssetResponse {
  Asset asset = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"asset\"" ];
}

message PairInfo{
  uint64 id                = 1;
  uint64 asset_in          = 2 [ (gogoproto.moretags) = "yaml:\"asset_in\"" ];
  string denom_in          = 3 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
  uint64 asset_out         = 4 [ (gogoproto.moretags) = "yaml:\"asset_out\"" ];
  string denom_out         = 5 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
}

message QueryPairsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryPairsResponse {
  repeated PairInfo pairsInfo = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"pairs\"" ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryPairRequest {
  uint64 id = 1;
}

message QueryPairResponse {
  PairInfo pairInfo = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"pair\"" ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

message QueryAppRequest {
  uint64 id = 1;
}

message QueryAppResponse {
  AppMapping app = 1 [
    (gogoproto.moretags) = "yaml:\"app\"",
    (gogoproto.nullable) = false
  ];
}

message QueryAppsRequest {}

message QueryAppsResponse {
  repeated AppMapping apps = 1 [
    (gogoproto.moretags) = "yaml:\"apps\"",
    (gogoproto.nullable) = false
  ];
}

message QueryPairVaultRequest {
  uint64 id = 1;
}

message QueryPairVaultResponse {
  ExtendedPairVault pairVault = 1 [
    (gogoproto.moretags) = "yaml:\"pairVault\"",
    (gogoproto.nullable) = false
  ];
}

message QueryPairVaultsRequest {}

message QueryPairVaultsResponse {
  repeated ExtendedPairVault pairVault = 1 [
    (gogoproto.moretags) = "yaml:\"pairVault\"",
    (gogoproto.nullable) = false
  ];
}

message QueryProductToExtendedPairRequest {
  uint64 product_id = 1 [(gogoproto.moretags) = "yaml:\"product_id\""];
}

message QueryProductToExtendedPairResponse {
  repeated ExtendedPairVault extended_pair =1 [(gogoproto.moretags) = "yaml:\"extended_pair\""];
}

message QueryExtendedPairPsmPairWiseRequest {
  uint64 product_id = 1 [(gogoproto.moretags) = "yaml:\"product_id\""];
}

message QueryExtendedPairPsmPairWiseResponse {
  repeated uint64 extended_pairs_id =1 [(gogoproto.moretags) = "yaml:\"extended_pairs_id\""];
}

service QueryService {
  rpc QueryAssets(QueryAssetsRequest) returns (QueryAssetsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/assets";
  }
  rpc QueryAsset(QueryAssetRequest) returns (QueryAssetResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/assets/{id}";
  }
  rpc QueryPairs(QueryPairsRequest) returns (QueryPairsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/pairs";
  }
  rpc QueryPair(QueryPairRequest) returns (QueryPairResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/pairs/{id}";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/params";
  }
  rpc QueryAppsMapings(QueryAppsRequest) returns (QueryAppsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/apps";
  }
  rpc QueryAppMapings(QueryAppRequest) returns (QueryAppResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/app/{id}";
  }
  rpc QueryPairVault(QueryPairVaultRequest) returns (QueryPairVaultResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/pairVault/{id}";
  }
  rpc QueryPairVaults(QueryPairVaultsRequest) returns (QueryPairVaultsResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/pairVaults";
  }
  rpc QueryProductToExtendedPair(QueryProductToExtendedPairRequest) returns (QueryProductToExtendedPairResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/product_to_extended_pair/{product_id}";
  }
  rpc QueryExtendedPairPsmPairWise(QueryExtendedPairPsmPairWiseRequest) returns (QueryExtendedPairPsmPairWiseResponse) {
    option (google.api.http).get = "/comdex/asset/v1beta1/extended_pair_psm_pair_wise/{product_id}";
  }

}
